fixtures/fmt/bad/bad_datasource_columns.sans
# sans 0.1
datasource raw = csv("raw.csv", columns(a, b)
